--- a/library.properties
+++ b/library.properties
@@ -8,4 +8,4 @@ category=Communication
 url=https://github.com/m5stack/M5Module-LAN-13.2
 architectures=esp32
 includes=M5Module_LAN.h
-depends=M5GFX,M5Unified,M5-Ethernet,PubSubClient
+depends=M5GFX,M5Unified,M5-Ethernet,PubSubClient,ArduinoHttpClient
